upgraded to much newer assemblyscript version and updated various things

--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   ],
   "scripts": {
     "test": "node tests/index.js",
-    "asbuild:untouched": "asc assembly/index.ts -b build/untouched.wasm -t build/untouched.wat --importMemory --sourceMap --debug --runtime none",
-    "asbuild:optimized": "asc assembly/index.ts -b build/optimized.wasm -t build/optimized.wat --importMemory --sourceMap --optimize --runtime none",
+    "asbuild:untouched": "asc assembly/index.ts --sourceMap --target debug --runtime stub",
+    "asbuild:optimized": "asc assembly/index.ts --sourceMap --target release --runtime stub",
     "asbuild": "npm run asbuild:untouched && npm run asbuild:optimized",
     "build:wasmtobase64": "node -e \"fs.writeFileSync(`./optimized.wasm.js`, `export default Buffer.from('${fs.readFileSync('./build/optimized.wasm').toString('base64')}', 'base64')`)\"",
-    "build:astypes": "tsc --build ./assembly/tsconfig.json",
-    "build": "npm run asbuild:optimized && npm run build:wasmtobase64 && npm run build:astypes",
+    "build": "npm run asbuild:optimized && npm run build:wasmtobase64",
     "postinstall": "npm run build"
   },
   "author": "Francis Crick <fcrick@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "assemblyscript": "^0.13.8",
-    "typescript": "^3.9.6"
+    "assemblyscript": "^0.19.11"
+  },
+  "dependencies": {
+    "@assemblyscript/loader": "^0.19.11"
   }
 }
