--- a/assembly/tsconfig.json
+++ b/assembly/tsconfig.json
@@ -1,10 +1,6 @@
 {
-  "extends": "../node_modules/assemblyscript/std/assembly.json",
+  "extends": "assemblyscript/std/assembly.json",
   "include": [
     "./**/*.ts"
-  ],
-  "compilerOptions": {
-    "declaration": true,
-    "emitDeclarationOnly": true
-  }
+  ]
 }
